# ng_hal

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  syscalls.c
application/: main.cpp  syscalls.c
hal/: IRQ_priority.hpp  api.hpp  stdglue.hpp  systick.hpp
hal/clocks/: hclk.hpp  pclk.hpp  sysclk.hpp
hal/oscillators/: hse.hpp  hsi16.hpp  hsi48.hpp  lse.hpp  lsi.hpp  msi.hpp  pll.hpp
hal/peripherals/: gpio.hpp  i2c.hpp  usart.hpp
soc/: Non_copyable.hpp  assert.hpp  bit.hpp  bit_flag.hpp  macros.hpp  non_constructible.hpp  various.hpp  wait_for.hpp
soc/st/arm/: IRQ_priority.hpp  Register.hpp  api.hpp  nvic.hpp  stdglue.cpp  stdglue.hpp  systick.cpp  systick.hpp
soc/st/arm/CMSIS/Device/ST/STM32U0xx/: README.md
soc/st/arm/m0/u0/rm0503/: STM32U083RCTX.ld
soc/st/arm/m0/u0/rm0503/clocks/: base.hpp  hclk.hpp  pclk.hpp  sysclk.hpp
soc/st/arm/m0/u0/rm0503/oscillators/: hse.hpp  hsi16.hpp  hsi48.hpp  lse.hpp  lsi.hpp  msi.hpp  pll.hpp
soc/st/arm/m0/u0/rm0503/peripherals/GPIO/: base.hpp  gpio.cpp  gpio.hpp  gpio_ll.hpp  ll_gpio.hpp
soc/st/arm/m0/u0/rm0503/peripherals/I2C/: base.hpp  i2c.cpp  i2c.hpp
soc/st/arm/m0/u0/rm0503/peripherals/USART/: base.hpp  usart.cpp  usart.hpp  usart_ll.hpp
xmcu/: Limited.hpp  Non_copyable.hpp  Non_copyable_.hpp  Scoped_guard.hpp  bit.hpp  bit_flag.hpp  macros.hpp  non_constructible.hpp  stdglue.cpp  stdglue.hpp  various.hpp  wait_for.hpp
xmcu/hal/: IRQ_priority.hpp  api.hpp  nvic.hpp  stdglue.hpp  systick.hpp
xmcu/hal/clocks/: hclk.hpp  pclk.hpp  sysclk.hpp
xmcu/hal/oscillators/: hse.hpp  hsi16.hpp  hsi48.hpp  lse.hpp  lsi.hpp  msi.hpp  pll.hpp
xmcu/hal/peripherals/: gpio.hpp  i2c.hpp  usart.hpp
